discussion/kv_engine/184517/184517_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-20017: Add support for retrieving per-thread cpu usage

Use mcstat "threads details" or look in prometheus.

    ./mcstat --json 'threads details'
    {
      "details": {
        "89513": {
        "name": "memcached",
        "system": 110,
        "user": 1070
      },
    [... cut ...]

Change-Id: I80ea3eda72e8a1cb81a0cf281cd248e0bcebe20c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-09 10:12:25.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2023-01-09 10:23:39.000000000
Message: 
Patch Set 9: Code-Review-1

(3 comments)
Line:1750, statistics/stat_definitions.json -> Seeing this in Prometheus, where the "value" of the stat is just the thread CPU runtime, I think this would be better if renamed to something like "thread_cpu_usage" as that's more self-documenting when users are browsing the available stats in Prometheus etc.

(If we want a different name in the cbstats output then we can use the "cbstat" key to specify a different name - see comments at top of file.)

Line:1751, statistics/stat_definitions.json -> What's the reason to change to milliseconds?

Given we can easily have 100+ threads on a node, which might be _close to_ but not quite idle, having each of those threads round to either 0ms (under-counting) or 1ms (over-counting if reporting as 100ms total but perhaps much less than that) seems undesirable?

Line:101, utilities/string_utilities.h -> Suggest documenting this is only a heuristic, and returns the empty string if no pool name identified.

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-09 10:27:11.000000000
Message: 
Patch Set 9: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22385/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20: error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
            sigar::iterate_threads([&json, &pid](auto tid,
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/stats.cc:246:24: error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
                sigar::iterate_threads([&kvCollector](auto tid,
                       ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22385/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20:
error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22385/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51720/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/protocol/mcbp/stats_context.cc(612): error C2039: "iterate_threads": is not a member of "sigar" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51720/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43422/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43422/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1148/ : FAILURE

Compile error at [2023-01-09T10:18:07.604Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/stats.cc:246:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1148/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12106/ : FAILURE

Compile error at [2023-01-09T10:18:39.161Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/stats.cc:246:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12106/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23959/ : FAILURE

Compile error at [2023-01-09T10:22:23.561Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/daemon/stats.cc:246:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23959/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24429/ : FAILURE

Compile error at [2023-01-09T10:17:59.605Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/stats.cc:246:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24429/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24853/ : FAILURE

Compile error at [2023-01-09T10:21:26.419Z] ../kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24853/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25713/ : FAILURE

Compile error at [2023-01-09T10:16:08.610Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/stats.cc:246:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25713/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32849/ : FAILURE

Compile error at [2023-01-09T10:16:51.382Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/stats.cc:246:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32849/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12193/ : FAILURE

Compile error at [2023-01-09T10:19:30.913Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/stats.cc:246:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12193/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22024/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-09 10:33:26.000000000
Message: 
Patch Set 9:

(3 comments)
Line:1750, statistics/stat_definitions.json -> Done

Line:1751, statistics/stat_definitions.json -> That was what it was intended initially; and what the callback on linux (using the same method as for reporting the process usage) and on windows reported.

Line:101, utilities/string_utilities.h -> Done

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-10 07:35:40.000000000
MISMATCHED INLINE COMMENT
Line:1751, statistics/stat_definitions.json -> Done
----------------------------------------------------------------------------------------------------------------------
